# ariac_2024

./: README.md  readme_1.md
final_group3/: CMakeLists.txt  package.xml
final_group3/config/: sensors.yaml  sensors_bonus.yaml
final_group3/doc/: README.md
final_group3/final_group3/: advance_sensor.py  pre_processing.py
final_group3/include/final_group3/: ccs.hpp  orders.hpp  robot_manager.hpp  sensors.hpp  sensors_bonus.hpp  utils.hpp
final_group3/launch/: final.launch.py  final_bonus.launch.py  robot_manager.launch.py
final_group3/msg/: RobotStatus.msg  RobotTask.msg
final_group3/scripts/: advance_sensor_interface.py
final_group3/src/: ccs.cpp  robot_manager.cpp  sensors.cpp  sensors_bonus.cpp  utils.cpp
resources/: dataset_prep.py  save_image.py  yaml_generate.py
resources/dataset/: README.dataset.txt  README.roboflow.txt  data.yaml
resources/dataset/test/labels/: image_11_jpg.rf.d274f245864ea5c47d32d72b7dd5e94b.txt  image_24_jpg.rf.4a3949966985b34162b2751bcc65f1aa.txt  image_31_jpg.rf.014ee4db954512a1cca5e95d30e9849f.txt  image_7_jpg.rf.cccaa84e4af7c9afed0bd8d28b8d9659.txt
resources/dataset/train/labels/: image_10_jpg.rf.6a6b7889c894a3f41175fc7c69967555.txt  image_10_jpg.rf.a990cb55f4a4b92695a97b96df694ad5.txt  image_10_jpg.rf.b8b60614e5babb65492d4138c1e309b3.txt  image_12_jpg.rf.7bdcadc5106039f57c26449059f24372.txt  image_12_jpg.rf.d8bda1fc8ff86a4b5c4e05a660f9e7f6.txt  image_13_jpg.rf.3de62ae2a5ca6c5d88f66a3721cbbb68.txt  image_13_jpg.rf.db73d65bd7ae523dc0b78f779121e9fc.txt  image_14_jpg.rf.142c31509e03829a2238c2c4fb98d2c6.txt  image_14_jpg.rf.164d2a8ac46785beb9d5e6d58b407e84.txt  image_15_jpg.rf.227d094568810c4cff8dedb786a1d751.txt  image_15_jpg.rf.c7a39d8777f58bb649b1bd3726d4e3c3.txt  image_15_jpg.rf.cbc4d81863909c5e08767fcce19ceb92.txt  image_16_jpg.rf.09d2abbecb1566438c45b1384082cfd7.txt  image_16_jpg.rf.35b51ed8c8769446520e3e6179b84f3f.txt  image_16_jpg.rf.8612cf8a859197a2b211ce7b4a71ee9e.txt  image_18_jpg.rf.4480830bf6bd5ff601bc81c08326e272.txt  image_18_jpg.rf.8de7a4e575f4c3ec7dd56c758a334e2c.txt  image_18_jpg.rf.9eedbb4c21c1c562de2e4a26fb6da207.txt  image_19_jpg.rf.0b59d512290239dfdf1389ba4cfc872a.txt  image_19_jpg.rf.223a89b19c5daba75abc79ce4676215d.txt  image_19_jpg.rf.4dac6a08a6c4dcf9f75465032c56b942.txt  image_1_jpg.rf.29da3e5793a6677f9fad71ea458baa7c.txt  image_1_jpg.rf.795e52409808e2288bc6cfab629899fd.txt  image_20_jpg.rf.2615c03f701fa70c9e92e76247b17bfe.txt  image_20_jpg.rf.f4b7abc1298ceaebe07920f042e2e421.txt  image_20_jpg.rf.fc51e23377e7c56e27d60c8f0f2242db.txt  image_21_jpg.rf.4e666ea10177ac088ee6ff1135bf57bb.txt  image_21_jpg.rf.6e611b1d4bc0d20353abae7fd2434a46.txt  image_21_jpg.rf.b84d8588f75b960a743d86739a4a2e86.txt  image_23_jpg.rf.2ec0ce53c1983ab2abcc728dd088fa1c.txt  image_23_jpg.rf.3f0c1a0e2f5cc5a558041e23eedef9e2.txt  image_25_jpg.rf.200b98cd9a7343d56f5ec65afa331046.txt  image_25_jpg.rf.52fe799cc25d93156e7061217aefde10.txt  image_25_jpg.rf.5e2c9b11a69516d5f016aab7382a41b4.txt  image_26_jpg.rf.775abb04964c67d7a84d0b337330241e.txt  image_26_jpg.rf.eed8e1678fc2fe6f632ff44f6f4382e2.txt  image_26_jpg.rf.f0e28b44322ca41b0bd9fb2c542c81fe.txt  image_27_jpg.rf.30cd835e0698289a5fef077b862fe178.txt  image_27_jpg.rf.71d5fe9783d0169e143614ef46ce47c2.txt  image_27_jpg.rf.e87f93c3460009e1b99bc88dd4a1657a.txt  (+28 more)
resources/dataset/valid/labels/: image_17_jpg.rf.33625b8080f029dc1a97888990979526.txt  image_22_jpg.rf.d4cf71651c2e3e47bffe2bf566e3cb2b.txt  image_30_jpg.rf.8b27a394d49d935103c539dfbdc36302.txt  image_32_jpg.rf.0c16e0a5c79974066f63ade35fe4b573.txt  image_34_jpg.rf.472871ebf6bc4e324d6bfb68a6763569.txt  image_6_jpg.rf.989d12a6bda873cddf4b6fb36e917ac8.txt  image_9_jpg.rf.b8ec297ac585d5d0036d062c16380d42.txt
resources/yamls/: spawned_parts_0.yaml  spawned_parts_1.yaml  spawned_parts_10.yaml  spawned_parts_11.yaml  spawned_parts_12.yaml  spawned_parts_13.yaml  spawned_parts_14.yaml  spawned_parts_15.yaml  spawned_parts_16.yaml  spawned_parts_17.yaml  spawned_parts_18.yaml  spawned_parts_19.yaml  spawned_parts_2.yaml  spawned_parts_3.yaml  spawned_parts_4.yaml  spawned_parts_5.yaml  spawned_parts_6.yaml  spawned_parts_7.yaml  spawned_parts_8.yaml  spawned_parts_9.yaml
rwa3_group3/: CMakeLists.txt  jira.md  package.xml  readme.md
rwa3_group3/flowchart/: ccs_manager.drawio
rwa3_group3/include/rwa3_group3/: ccs.hpp  orders.hpp
rwa3_group3/src/: ccs.cpp
rwa4_group3/: CMakeLists.txt  package.xml
rwa4_group3/config/: sensors.yaml  yolo_sensors.yaml
rwa4_group3/include/rwa4_group3/: ccs.hpp  orders.hpp  robot_manager.hpp  sensors.hpp  sensors_bonus.hpp
rwa4_group3/launch/: robot_manager.launch.py  rwa4.launch.py  rwa4_bonus.launch.py
rwa4_group3/msg/: RobotStatus.msg
rwa4_group3/rwa4_group3/: advance_sensor.py  aruco_detect.py
rwa4_group3/scripts/: advance_sensor_interface.py
rwa4_group3/sensors_ariac-gazebo/: yolo.yaml
rwa4_group3/src/: ccs.cpp  robot_manager.cpp  sensors.cpp  sensors_bonus.cpp  utils.cpp
rwa5_group3/: CMakeLists.txt  package.xml
rwa5_group3/config/: sensors.yaml
rwa5_group3/include/rwa5_group3/: ccs.hpp  robot_manager.hpp  sensors.hpp  sensors_bonus.hpp
rwa5_group3/launch/: robot_manager.launch.py  rwa5.launch.py  rwa5_bonus.launch.py
rwa5_group3/rwa5_group3/: advance_sensor.py  pre_processing.py
rwa5_group3/scripts/: advance_sensor_interface.py
rwa5_group3/src/: ccs.cpp  robot_manager.cpp  sensors.cpp  sensors_bonus.cpp  utils.cpp
