<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rwa3_group3</name>
  <version>0.0.0</version>

  <description>Package for Kitting Tasks</description>
  <maintainer email="sparab@umd.edu">Shantanu</maintainer>
  <maintainer email="akasparm@umd.edu">Akash</maintainer>
  <maintainer email="nmarne@umd.edu">Neha</maintainer>
  <maintainer email="bbora@umd.edu">Bharath</maintainer>
  <maintainer email="saitejag@umd.edu">Sai Teja</maintainer>

  <license>Apache License 2.0</license>
  
  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
