<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rwa4_group3</name>
  <version>0.0.0</version>
  <description>Package for RWA 4</description>
  <maintainer email="sparab@umd.edu">Shantanu</maintainer>
  <maintainer email="akasparm@umd.edu">Akash</maintainer>
  <maintainer email="nmarne@umd.edu">Neha</maintainer>
  <maintainer email="bbora@umd.edu">Bharath</maintainer>
  <maintainer email="saitejag@umd.edu">Sai Teja</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <build_depend>rosidl_default_generators</build_depend>
  
  <member_of_group>rosidl_interface_packages</member_of_group>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
